--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698292463-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698292463-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -266,7 +266,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -306,7 +306,7 @@ an?...</p>
 <p>Oct 16, 2019 ... As our Business Intelligence Analyst at Pollen, you will be part of the broader 
 agile and geographically-dispersed BI team, focused on facilitating a company?...</p>
 <hr/>
-<h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -410,12 +410,12 @@ using?...</p>
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://miacar.join.com/jobs/160708-business-intelligence-manager-miacar-m-f-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://miacar.join.com/jobs/160708-business-intelligence-manager-miacar-m-f-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Claranet/743999696597480-business-intelligence-analyst-agualva-cacem'>Claranet Business Intelligence?Analyst - Agualva/Cac?m | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Claranet/743999696597480-business-intelligence-analyst-agualva-cacem'>Claranet Business Intelligence?Analyst - Agualva/Cac?m | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -439,7 +439,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.codeforamerica.org/job-postings/1432-business-intelligence-consultant?utm_campaign=featured_job&utm_source=outreach_pilot&utm_medium=twitter'>Business Intelligence Consultant, City of Austin Transportation Department | Public Interest Tech Job Board by Code for America</a></h5> 
+<h5><a href='https://jobs.codeforamerica.org/job-postings/1432-business-intelligence-consultant?utm_campaign=featured_job&utm_source=outreach_pilot&utm_medium=twitter'>Business Intelligence Consultant, City of Austin Transportation Department | Public Interest Tech Job Board by Code for America</a></h5> 
 <p><span class="badge badge-light">Austin Austin Austin</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -463,7 +463,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nvjqgMwL'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nvjqgMwL'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
