--- a/ios-developer.html
+++ b/ios-developer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.nesgt.com/job/107430060370/ios-app-developer/'>IOS App Developer with ref. BH-118396 - NES Global Talent</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/endurance/jobs/1857816?gh_src=3e45c3701'>Job Application for Senior iOS Developer at Endurance International Group</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/grow99/jobs/4479026002'>Job Application for Senior iOS Developer at Grow Mobility</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grow99/jobs/4479026002'>Job Application for Senior iOS Developer at Grow Mobility</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -195,7 +199,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/4ca70a0b-0e6e-4a2e-ab14-f1dd07039a1c'>Rappi - Senior iOS Developer - Pagos y Fraude</a></h5> 
+<h5><a href='https://jobs.lever.co/rappi/4ca70a0b-0e6e-4a2e-ab14-f1dd07039a1c'>Rappi - Senior iOS Developer - Pagos y Fraude</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -269,7 +273,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -333,7 +337,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/ios-mobile-software-developer-b7bmMw63er6ypNaKiznY58'>iOS Mobile Software Developer #0156 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/ios-mobile-software-developer-b7bmMw63er6ypNaKiznY58'>iOS Mobile Software Developer #0156 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -357,7 +361,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/Lead-Senior-IOS-Developer-Geddit-LIVE'>Lead Senior iOS Developer | Geddit LIVE - Santora Nakama - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/Lead-Senior-IOS-Developer-Geddit-LIVE'>Lead Senior iOS Developer | Geddit LIVE - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -365,7 +369,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Manchester England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -373,7 +377,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -411,7 +415,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
+<h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 25, 2019 ... Senior iOS Developer (SDEIII). Toronto, Ontario, Canada. Engineering ? 
 Software Development. Full-time. Apply for this job. TradeRev is an online 
@@ -429,7 +433,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -457,10 +461,6 @@ automotive?...</p>
       iOS Developer - Chip
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on: 2019-10-05</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696681449-android-ios-developer'>Mobile Programming LLC Android/iOS developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
 
